--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,8 +29,9 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v7
+        with:
+          default_author: github_actor
+          commit_message: 'Update contributors'
+          signoff: true
