--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,13 +25,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
       - name: Commit changes
         uses: EndBug/add-and-commit@v7
         with:
           default_author: github_actor
-          commit_message: 'Update contributors'
+          commit_message: 'Update latest repository'
           signoff: true
