--- a/.github/workflows/one.yml
+++ b/.github/workflows/one.yml
@@ -15,6 +15,6 @@ jobs:
         uses: EndBug/add-and-commit@v7
         with:
             author_name: Namya LG
-            author-email: namyalg@gmail.com
+            author_email: namyalg@gmail.com
             default_author: github_actor
             message: 'Work please'
