--- a/.github/workflows/one.yml
+++ b/.github/workflows/one.yml
@@ -1,20 +1,10 @@
 name : Test Commit
 
-on : push
-
+on: push
 jobs:
-  # This workflow contains a single job called "build"
-  testcomm:
-    # The type of runner that the job will run on
+  build:
     runs-on: ubuntu-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      - name: Commits
-        uses: EndBug/add-and-commit@v7
+      - uses: EndBug/add-and-commit@v8
         with:
-            author_name: Namya LG
-            author_email: namyalg@gmail.com
-            default_author: github_actor
-            message: 'Work please'
+          default_author: github_actions
