--- a/.github/workflows/one.yml
+++ b/.github/workflows/one.yml
@@ -9,3 +9,4 @@ jobs:
       - uses: EndBug/add-and-commit@v8
         with:
           default_author: github_actions
+          message : Updated latest push
