--- a/.github/workflows/one.yml
+++ b/.github/workflows/one.yml
@@ -5,6 +5,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - uses: EndBug/add-and-commit@v8
       with:
         message: Show GitHub Actions logo
