--- a/.github/workflows/one.yml
+++ b/.github/workflows/one.yml
@@ -1,9 +1,9 @@
 name : Test Commit
 
 on:
-  push:
-    branches:
-      - "main"
+  schedule:
+    - cron : '*/5 * * * *'
+
 jobs:
   build:
     runs-on: ubuntu-latest
