--- a/.github/workflows/one.yml
+++ b/.github/workflows/one.yml
@@ -8,11 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: stefanzweifel/git-auto-commit-action@v4
+    - uses: EndBug/add-and-commit@v8
       with:
-        # Optional, but recommended
-        # Defaults to "Apply automatic changes"
-        commit_message: Automated Change
+        default_author: github_actions
+        message : "Updated latest push"
+
+#     - uses: stefanzweifel/git-auto-commit-action@v4
+#       with:
+#         # Optional, but recommended
+#         # Defaults to "Apply automatic changes"
+#         commit_message: Automated Change
 #     - uses: EndBug/add-and-commit@v7
 #       with:
 #         message: Show GitHub Actions logo
