--- a/.github/workflows/five.yml
+++ b/.github/workflows/five.yml
@@ -1,8 +1,8 @@
-name : Test Commit
+name : At 5
 
 on: 
   schedule:
-    - cron : '0 16 * * SAT'
+    - cron : '35 10 * * SAT'
   workflow_dispatch:
   
 jobs:
