--- a/.github/workflows/one.yml
+++ b/.github/workflows/one.yml
@@ -2,8 +2,8 @@ name : Test Write Commit
 
 on:
   schedule:
-  - cron : '* * * * *'
-  push:
+  - cron: '55 * * * *'
+  
   workflow_dispatch:
   
 jobs:
