--- a/.github/workflows/one.yml
+++ b/.github/workflows/one.yml
@@ -13,11 +13,15 @@ jobs:
       run: |
           python t1.py
           echo "Wrote an thing here"
-          git status
+          
     - uses: EndBug/add-and-commit@v8
       with:
+        add: "myfile.txt"
         default_author: github_actions
         message : "Updated latest push"
+        push: true
+    
+    
 
 #     - uses: stefanzweifel/git-auto-commit-action@v4
 #       with:
