--- a/.github/workflows/one.yml
+++ b/.github/workflows/one.yml
@@ -10,9 +10,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Run Contributors script
+    - env: 
+        WEATHER_API: ${{ secrets.WEATHER_API }}
       run: |
-          python t1.py
-          echo "New file" >> abc.txt
+          echo env.WEATHER_API
           echo "Wrote an thing here"
           
     - uses: EndBug/add-and-commit@v8
