--- a/.github/workflows/one.yml
+++ b/.github/workflows/one.yml
@@ -13,9 +13,8 @@ jobs:
       env: 
         WEATHER_API: ${{ secrets.WEATHER_API }}
       run: |
-          python t1.py ${{ secrets.WEATHER_API }}
+          echo "The GitHub Action Secret will be masked:  "
           echo ${{ secrets.WEATHER_API }}
-          echo "Wrote an thing here"
           
     - uses: EndBug/add-and-commit@v8
       with:
