--- a/.github/workflows/one.yml
+++ b/.github/workflows/one.yml
@@ -14,6 +14,11 @@ jobs:
         echo "The GitHub Action Secret will be masked:  "
         echo ${{ secrets.SECRET_TOKEN }}
         echo "Trick to echo GitHub Actions Secret:  "
+    - name: Step 2 - GitHub Action if statement (true)
+      env: 
+        WHO_TO_TRUST: ${{ secrets.SECRET_TOKEN }}
+      if:  env.WHO_TO_TRUST == 'Namya'
+      run: echo "I know what the secret token is!"
           
     - uses: EndBug/add-and-commit@v8
       with:
