--- a/.github/workflows/one.yml
+++ b/.github/workflows/one.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Run Unit tests
       env:
           FIXER_IO_ACCESS_TOKEN: ${{ secrets.SECRET_TOKEN }}
-      run: python t1.py $FIXER_IO_ACCESS_TOKEN
+      run: python t1.py -Parg1=$FIXER_IO_ACCESS_TOKEN
 
     - uses: EndBug/add-and-commit@v8
       with:
