--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
   
 jobs:
-  GET and store temperature:
+  temperature:
     runs-on: ubuntu-latest
     steps:        
     - uses: actions/checkout@v2
@@ -14,6 +14,6 @@ jobs:
         python get_temperature.py
 
     - uses: EndBug/add-and-commit@v8
-        with:
+      with:
           author_name: Namya
           message : Temperature written
