--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,8 @@ name : Temperature
 on:
   # a cron job runs at scheduled intervals, here runs at the start of every hour
   #uncomment this to run the cron job
-  #   schedule:
-  #     - cron : '0 * * * *'
+     schedule:
+       - cron : '0 * * * *'
   #writing this allows the user to manually run the workflow
   workflow_dispatch:
   
