--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,15 @@
 name : Temperature
 
 #on the following events, the workflow is triggered
+# Controls when the workflow will run
 on:
-  # a cron job runs at scheduled intervals, here runs at the start of every hour
-  #uncomment this to run the cron job
-     schedule:
-       - cron : '0 * * * *'
-  #writing this allows the user to manually run the workflow
+  # Triggers the workflow on push or pull request events but only for the "main" branch
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
   
 jobs:
